# nono

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  WSL2_CHANGELOG.md  cliff.toml
.github/workflows/: ci.yml  image-build.yml  label-new-issues.yml  nix-integration.yml  release.yml  sign-instruction-files.yml
bindings/c/: Cargo.toml
bindings/c/include/: nono.h
bindings/c/src/: capability_set.rs  lib.rs  sandbox.rs  types.rs
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-cli/data/: network-policy.json  nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: app_runtime.rs  audit_commands.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_runtime.rs  credential_runtime.rs  exec_strategy.rs  execution_runtime.rs  hooks.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  main.rs  network_policy.rs  open_url_runtime.rs  output.rs  policy.rs  policy_cmd.rs  profile_cmd.rs  profile_runtime.rs  proxy_runtime.rs  pty_proxy.rs  query_ext.rs  rollback_commands.rs  rollback_preflight.rs  rollback_runtime.rs  rollback_session.rs  sandbox_log.rs  sandbox_prepare.rs  sandbox_state.rs  session.rs  session_commands.rs  setup.rs  startup_runtime.rs  supervised_runtime.rs  test_env.rs  trust_cmd.rs  trust_keystore.rs  trust_scan.rs  (+2 more)
crates/nono-cli/tests/: env_vars.rs  policy_cmd.rs  profile_cmd.rs
crates/nono-proxy/: Cargo.toml  README.md
crates/nono-proxy/src/: audit.rs  config.rs  connect.rs  credential.rs  error.rs  external.rs  filter.rs  lib.rs  reverse.rs  route.rs  server.rs  token.rs
crates/nono/src/: capability.rs  diagnostic.rs  error.rs  keystore.rs  lib.rs  net_filter.rs
docs/: docs.json
docs/cli/clients/: claude-code.mdx  openclaw.mdx  opencode.mdx  quickstart.mdx
docs/cli/features/: atomic-rollbacks.mdx  credential-injection.mdx  execution-modes.mdx  learn.mdx  network-proxy.mdx  networking.mdx  policy-introspection.mdx  profile-authoring.mdx  profiles-groups.mdx  secrets.mdx  supervisor.mdx  (+2 more)
scripts/: claude-auth-state.sh
tests/: run_integration_tests.sh
tests/integration/: test_edge_cases.sh  test_env_sanitization.sh  test_exec_strategy.sh  test_gpu.sh  test_gpu_ollama.sh  test_learn.sh  test_network.sh  test_override_deny.sh  test_policy_queries.sh  test_profiles.sh  test_rollback.sh  test_sensitive_paths.sh  test_setup.sh  test_silent_output.sh  test_system_paths.sh  test_trust_cli.sh
tools/: test-update-server.py
(+22 files in other folders)
